<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/settingsFragment">

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.dotify.SettingsFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_settingsFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <argument
            android:name="song"
            app:argType="com.ericchee.songdataprovider.Song" />
        <action
            android:id="@+id/action_settingsFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <argument
            android:name="playCount"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.dotify.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.example.dotify.StatisticsFragment"
        android:label="@string/profile_statistics"
        tools:layout="@layout/fragment_statistics" >
        <argument
            android:name="song"
            app:argType="com.ericchee.songdataprovider.Song" />
        <argument
            android:name="playCount"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.dotify.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <action
        android:id="@+id/action_global_statisticsFragment"
        app:destination="@id/statisticsFragment" />

</navigation>