<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SettingsFragment"
    android:padding="14dp">

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnProfileStat"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/btnProfileStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_statistics"
        app:layout_constraintTop_toBottomOf="@id/btnProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnAbout"/>

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        app:layout_constraintTop_toBottomOf="@id/btnProfileStat"
        app:layout_constraintStart_toStartOf="parent"/>

    <Switch
        android:id="@+id/switchSettingsPull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Switch"
        android:paddingTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnAbout"
        app:layout_constraintLeft_toLeftOf="parent"
      />


</androidx.constraintlayout.widget.ConstraintLayout>